# veritas

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  MANIFEST.in  PACKAGING_TODO.md  README.md  README_TEMPLATE.md  RELEASING.md  annotated.html  basics_8hpp.html  basics_8hpp__dep__incl.map  basics_8hpp__dep__incl.md5  basics_8hpp__incl.map  basics_8hpp__incl.md5  basics_8hpp_source.html  block__store_8hpp_source.html  classAddTree.html  classAddTree__inherit__graph.map  classAddTree__inherit__graph.md5  classDomain.html  classDomainPair.html  classFeatMap.html  classGraphOutputSearch.html  classGraphRobustnessSearch.html  classGraphSearch.html  classLtSplit.html  classSearch.html  classSnapshot.html  classSolution.html  classTree.html  classes.html  classveritas_1_1AddTree-members.html  classveritas_1_1AddTree.html  classveritas_1_1AddTree__inherit__graph.map  classveritas_1_1AddTree__inherit__graph.md5  classveritas_1_1BlockStore-members.html  classveritas_1_1BlockStore.html  classveritas_1_1BoxRef-members.html  (+289 more)
.github/workflows/: build_wheels.yml  docsgen.yml  doxygen.yml  python_package.yml
docs/: Makefile  README.md  generate_python_examples.py
docs/doxygen/: Doxyfile
docs/source/: conf.py  index.rst
docs/source/api/cpp/: cpp.rst  cpp_examples.rst
docs/source/api/python/: index.rst  python.rst  python_examples.rst
docs/sphinx/source/: conf.py  index.rst
docs/sphinx/source/_templates/: template.rst
docs/sphinx/source/usage/: custom_trees.rst  custom_trees_template.rst  installation.rst  python_examples.py  queries.rst  queries_template.rst  tree_ensembles.rst  tree_ensembles_template.rst
examples/: constraints.py  covertype.ipynb  global_fairness_verification.ipynb  mnist.ipynb  multiclass_mnist.ipynb  pruning.py  pruning_two_instances.py  sqdist1_constraint.ipynb  sqdist1_flat.py  sqdistmodel.at  synthetic.ipynb  trace.ipynb  trace_util.py  xg_penalty_example.ipynb  xg_penalty_example_util.py
examples/data/: Trace_TEST.txt
examples/models/: sqdistmodel.at
notebooks/: xgb-mnist.ipynb  xgb-monotonicity.ipynb
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  files_0.js  files_1.js  files_2.js  (+35 more)
src/bindings/: addtree.cpp  bindings.cpp  bindings.h  box.cpp  featmap.cpp  interval.cpp  search.cpp  tree.cpp  utility.cpp
src/cpp/: addtree.cpp  addtree.h  addtree.hpp  basics.hpp  bindings.cpp  block_store.hpp  box.hpp  boxchecker.cpp  boxchecker.h  constraints.cpp  constraints.hpp  domain.cpp  domain.h  domain.hpp  domain_store.hpp  domtree.cpp  domtree.h  feat_info.cpp  feat_info.h  features.hpp  fp.hpp  fp_search.cpp  fp_search.hpp  graph.cpp  graph.h  graph.hpp  graph_robustness_search.hpp  graph_search.hpp  graph_search_old.hpp  heuristics.hpp  interval.hpp  json_io.cpp  json_io.hpp  json_io_nlohmann.cpp  leafiter.hpp  new_graph.cpp  new_graph.hpp  new_tree.cpp  new_tree.hpp  node_search.cpp  (+19 more)
src/python/: pytrees.py
src/python/gbcheck/: __init__.py
src/python/treeck/: __init__.py  consts.py  distributed.py  parallel_solver.py  plot.py  pytrees.py  verifier.py  xgb.py  z3.py  z3backend.py  z3solver.py  z3verifier.py
src/python/veritas/: __init__.py  add_tree.py  addtree.py  addtree_conversion.py  addtree_converter.py  converter_manager.py  groot.py  kantchelian.py  lgb.py  lgbm_converter.py  model_conversion_test.py  optimizer.py  robustness.py  sklearn.py  sklearn_converter.py  smt.py  util.py  xgb.py  xgb_converter.py  z3backend.py
src/python/veritas0/: __init__.py  kantchelian.py  optimizer.py  robustness.py  xgb.py
tests/: gen_models.py  generate_models.py  readme_code.py  run.py  start_dask.py  test_adverserial.py  test_box.cpp  test_box_checker.py  test_converters.py  test_dask.py  test_distributed.py  test_domtree.py  test_fp.cpp  test_graph.py  test_groot.py  test_interval.cpp  test_json_io.cpp  test_leafiter.cpp  test_main.cpp  test_memory.cpp  test_readme.py  test_rfmodel.py  test_search.cpp  test_search.py  test_searchspace.py  test_splittree.py  test_subspaces.py  test_template.cpp  test_tree.cpp  test_tree.py  test_verifier.py  test_z3backend.py  test_z3solver.py
tests/data/: .gitignore  img.npy
tests/experiments/: .gitignore  bounds.py  datasets.py  external_merge.py  external_merge_experiment.py  mnist-single-instance.py  random_analysis.py  random_experiment.py  robust.py  robustness_analysis.py  robustness_experiment.py  robustness_experiment2.py  robustness_experiment_chenmodel.py  scale-covtype.py  scale-mnist.py  scale-plot.py  scale-table.py  scale.py  scale2.py  scale_plot.py  stress_experiment.py  test.py  test10.py  test2.py  test3.py  test4.py  treeck_robust.py  util.py
tests/experiments/notebooks/: .gitignore  robustness-all.ipynb  robustness_over_time.ipynb
tests/experiments/scale/: .gitignore
tests/experiments/scale-mnist/: .gitignore
tests/models/: .gitignore  mnist-instances.json  rf-img-multiclass.json  rf_model.json  xgb-calhouse-easy.json  xgb-calhouse-hard.json  xgb-calhouse-intermediate.json  xgb-calhouse-very-easy.json  xgb-covtype-easy.json  xgb-img-easy-new.json  xgb-img-easy-values.json  xgb-img-easy.json  xgb-img-hard-new.json  xgb-img-hard-values.json  xgb-img-hard.json  xgb-img-multiclass-multivalue.json  xgb-img-multiclass-very-easy.json  xgb-img-multiclass.json  xgb-img-very-easy-new.json  xgb-img-very-easy-values.json  xgb-img-very-easy.json  xgb-mnist-bin-yis1-easy.json  xgb-mnist-bin-yis1-intermediate.json  xgb-mnist-yis0-easy.json  xgb-mnist-yis0-hard.json  xgb-mnist-yis1-easy.json  xgb-mnist08-easy.json  xgb-mnist17-easy.json
tests/notebooks/: hands-embed-pytorch.ipynb  hands-label.ipynb  hands-resize.ipynb  xgb-compas.ipynb  xgb-mnist.ipynb  xgb-monotonicity.ipynb  youtube.ipynb
(+10 files in other folders)
