[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "dtai-veritas"
dynamic = ["version"]
description = "Versatile Verification of Tree Ensembles"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Laurens Devos", email = "laurens.devos@kuleuven.be" }]
maintainers = [{ name = "Laurens Devos", email = "laurens.devos@kuleuven.be" }]
requires-python = ">=3.11"
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/laudv/veritas"

[project.optional-dependencies]
xgboost = ["xgboost"]
lightgbm = ["lightgbm"]
sklearn = ["scikit-learn"]
milp = ["gurobipy"]
smt = ["z3-solver"]

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/python/veritas"]

[tool.scikit-build.editable]
rebuild = true
# verbose = false

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/python/veritas/__init__.py"
regex = '__version__\s*=\s*"(?P<value>[^"]+)"'

[tool.scikit-build.sdist]
# git submodules are not picked up by scikit-build-core's default
# git-ls-files-based sdist listing, so they must be added explicitly.
include = ["lib/pybind11/**", "lib/nlohmann_json/**"]
exclude = [
    "lib/pybind11/tests/**",
    "lib/pybind11/docs/**",
    "lib/nlohmann_json/test/**",
    "lib/nlohmann_json/docs/**",
]

[tool.cibuildwheel]
# Note: cibuildwheel 3.0+ no longer builds PyPy or Python <3.9 by default, so
# "pp*"/"cp38-*" selectors are gone (they'd now be no-ops with a warning).
# cp314t (free-threaded) re-enabled now that pybind11 is v3.0.4 (has real
# free-threading support); our module doesn't declare
# py::mod_gil_not_used(), so CPython just re-enables the GIL when importing
# it (the standard safe fallback) -- no real no-GIL parallelism yet, but safe.
skip = "cp39-* cp310-* *-win32 *-manylinux_i686 *-musllinux*"
# z3-solver is only exercised on Linux (see per-platform overrides below)
# macOS wheels failed and fixing it is not worth the time at the moment
test-requires = "xgboost lightgbm scikit-learn gurobipy imageio pandas"
# cd into {project} first: several tests open data/model files using paths
# relative to the repo root (e.g. "tests/models/rf_model.json"), and
# cibuildwheel does not run test-command from the project directory.
test-command = "cd {project} && python -m unittest discover tests"

# Setuptools bug causes collision between pypy and cpython artifacts
# (from pybind/cmake_example, is necessary)
#before-build = "rm -rf {project}/build"

[tool.cibuildwheel.linux]
test-requires = "xgboost lightgbm scikit-learn gurobipy imageio pandas z3-solver"

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.14" }
# xgboost's macOS wheels dynamically link libomp.dylib (OpenMP runtime) but
# don't bundle it, and GitHub's macOS runners don't have it preinstalled.
before-test = "brew install libomp"
