[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "dtai-veritas"
dynamic = ["version"]
description = "Versatile Verification of Tree Ensembles"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Laurens Devos", email = "laurens.devos@kuleuven.be" }]
maintainers = [{ name = "Laurens Devos", email = "laurens.devos@kuleuven.be" }]
requires-python = ">=3.11"
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/laudv/veritas"

[project.optional-dependencies]
xgboost = ["xgboost"]
lightgbm = ["lightgbm"]
sklearn = ["scikit-learn"]
milp = ["gurobipy"]
smt = ["z3-solver"]

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/python/veritas"]

[tool.scikit-build.editable]
rebuild = true
# verbose = false

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/python/veritas/__init__.py"
regex = '__version__\s*=\s*"(?P<value>[^"]+)"'

[tool.scikit-build.sdist]
# git submodules are not picked up by scikit-build-core's default
# git-ls-files-based sdist listing, so they must be added explicitly.
include = ["lib/pybind11/**", "lib/nlohmann_json/**"]
exclude = [
    "lib/pybind11/tests/**",
    "lib/pybind11/docs/**",
    "lib/nlohmann_json/test/**",
    "lib/nlohmann_json/docs/**",
]

[tool.cibuildwheel]
# Note: cibuildwheel 3.0+ no longer builds PyPy or Python <3.9 by default, so
# "pp*"/"cp38-*" selectors are gone (they'd now be no-ops with a warning).
# cp314t (free-threaded) re-enabled now that pybind11 is v3.0.4 (has real
# free-threading support); our module doesn't declare
# py::mod_gil_not_used(), so CPython just re-enables the GIL when importing
# it (the standard safe fallback) -- no real no-GIL parallelism yet, but safe.
skip = "cp39-* cp310-* *-win32 *-manylinux_i686 *-musllinux*"
# z3-solver is only exercised on Linux (see per-platform overrides below)
# macOS wheels failed and fixing it is not worth the time at the moment
test-requires = "xgboost lightgbm scikit-learn gurobipy imageio pandas"
# cd into {project} first: several tests open data/model files using paths
# relative to the repo root (e.g. "tests/models/rf_model.json"), and
# cibuildwheel does not run test-command from the project directory.
test-command = "cd {project} && python -m unittest discover tests"

# Setuptools bug causes collision between pypy and cpython artifacts
# (from pybind/cmake_example, is necessary)
#before-build = "rm -rf {project}/build"

[tool.cibuildwheel.linux]
test-requires = "xgboost lightgbm scikit-learn gurobipy imageio pandas z3-solver"

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.14" }
# xgboost's macOS wheels dynamically link libomp.dylib (OpenMP runtime) but
# don't bundle it, and GitHub's macOS runners don't have it preinstalled.
before-test = "brew install libomp"

[tool.cibuildwheel.windows]
# plain `cd` in cmd.exe does not switch drives; GitHub's Windows runners put
# the checkout on D: while the shell's active drive is elsewhere, so the
# top-level test-command's `cd {project}` silently no-ops and `discover`
# then runs from the wrong directory ("tests" isn't found as a directory, so
# unittest falls back to importing it as a dotted module name, which fails
# with the same "Start directory is not importable" text -- unrelated to
# tests/__init__.py). `cd /d` actually switches drives too.
test-command = "cd /d {project} && python -m unittest discover tests"
# Tree.__str__/AddTree.__str__ (tree.hpp's print_node) use box-drawing
# characters (├─ └─ │); Windows consoles default stdout to a legacy codepage
# (e.g. cp1252) that can't encode them, crashing any `print(tree)`.
# PYTHONUTF8 forces Python's text I/O to UTF-8 regardless of the console
# codepage (this is what PEP 540/686 eventually make the default anyway).
environment = { PYTHONUTF8 = "1" }

[tool.ruff]
# Target Python version matching requires-python
target-version = "py311"

# Line length matching the previous flake8 setting
line-length = 127

# Exclude typical build/cache/dependency directories
exclude = [
    ".git",
    ".github",
    ".nox",
    ".pytest_cache",
    ".venv",
    "build",
    "lib",
    "tests/experiments",
    "scratch",
    "examples",
]

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle errors (E) and warnings (W), bugbear (B), McCabe (C90), and isort (I)
select = ["E", "F", "W", "B", "C90", "I"]
ignore = [
    "E701", # Multiple statements on one line (colon)
    "E712", # Avoid equality comparisons to True/False (breaks z3 symbolic comparisons)
    "E731", # Do not assign a lambda expression
    "E741", # Ambiguous variable name 'l' (used for left child in trees)
    "C901", # Function too complex
    "B905", # zip() without strict=
    "B020", # Loop control variable self overrides iterable
    "B904", # raise ... from err in except block
    "E501", # Line too long
    "B023", # Function definition does not bind loop variable
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "F403",  # star imports
    "F405",  # undefined name from star imports
    "F841",  # unused variables
    "E721",  # type comparisons
    "E402",  # module level import not at top of file
    "B007",  # loop control variable not used
]


[tool.ruff.lint.mccabe]
# Maximum McCabe complexity matching the previous flake8 setting
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
